--- a/speaker_classification.ipynb
+++ b/speaker_classification.ipynb
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('src/saved_models/best_xgb_model.pkl')"
+    "# model = load_model('src/saved_models/best_xgb_model.pkl')"
    ]
   },
   {
@@ -841,18 +841,25 @@
     }
    ],
    "source": [
-    "import joblib\n",
-    "joblib.dump(model, 'src/selected_model/knn_base_40_.pkl')"
+    "# import joblib\n",
+    "# joblib.dump(model, 'src/selected_model/knn_base_40_.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = load_model('src/selected_model/knn_base_40.pkl')"
+    "model = load_model('src/selected_model/knn_base_40.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
