--- a/combined_approach.ipynb
+++ b/combined_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,27 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N_NEIGHBORS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +246,7 @@
        "[5 rows x 186 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -336,8 +316,8 @@
       " [  119   215     4  2036]]\n",
       "ACCURACY SCORE:\n",
       "0.9419\n",
-      "CPU times: user 1min 14s, sys: 2.16 s, total: 1min 16s\n",
-      "Wall time: 9.37 s\n"
+      "CPU times: user 1min 17s, sys: 2.2 s, total: 1min 19s\n",
+      "Wall time: 9.59 s\n"
      ]
     }
    ],
@@ -348,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +547,7 @@
        "[5 rows x 368 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,23 +627,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Accuracy LGBM 0.9555065055762082\n",
-      "Final Accuracy KNN 0.9656908302354399\n"
+      "Final Accuracy LGBM 0.9632125154894672\n",
+      "Final Accuracy KNN 0.9556226765799256\n"
      ]
     }
    ],
    "source": [
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "acc_lgbm = accuracy_score(lgbm_combined, y_pred)\n",
-    "acc_knn = accuracy_score(knn_combined, y_pred)\n",
+    "acc_lgbm = accuracy_score(lgbm_combined, y_test)\n",
+    "acc_knn = accuracy_score(knn_combined, y_test)\n",
     "print(\"Final Accuracy LGBM\", acc_lgbm)\n",
     "print(\"Final Accuracy KNN\", acc_knn)"
    ]
